<resources>
    <string name="app_name">MSU NOW</string>

    <!-- Strings related to login -->
    <!--Firebase-->
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication error, Please enter a valid email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already registered. Login !!</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_sign_up">Sign Up !!</string>
    <string name="err_msg_email">Enter a valid email.</string>
    <string name="err_msg_required">Required !!</string>
    <string name="err_msg_password">Enter a valid password with min 6 characters.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">"Password "</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="first_name"> first name</string>
    <string name="last_name"> last name</string>
    <string name="action_sign_up">Register!</string>
    <string name="prompt_create_email">example@montclair.edu</string>
    <string name="prompt_create_password">password</string>
    <string name="prompt_dob">mm/dd/yyyy</string>
    <string name="action_register">Not yet registered? Register Here!</string>
    <string name="forgot_pw">Forgot your password?</string>
    <string name="forgetpage_title">Enter your account information</string>
    <string name="forgot_submit">Submit</string>
    <string name="forgot_password_new">New Password</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="topic_subject">Your Topic Subject</string>
    <string name="topic_body">Topic Body</string>
    <string name="msunow">MSU NOW</string>
    <string name="title_activity_register">Register</string>
    <string name="update_changes">Update Changes</string>
    <string name="nav_logout">Log Out</string>
    <string name="caption_topic_title">Topic Subject</string>
    <string name="caption_hint_topic_title">Enter Topic Title</string>
    <string name="caption_topic_body">Topic Body</string>
    <string name="caption_hint_topic_body">Enter Topic Body</string>
    <string name="caption_select_room">Select Room</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_post">Post</string>
    <string name="action_back">Back</string>
    <string name="caption_view_other_discussions">View All Other Discussions</string>


    <string-array name="rooms">
        <item> Campus Sale</item>
        <item> Study Together</item>
        <item> See Something, Say something</item>
        <item> Have Fun on Weekend</item>
        <item> Tutor Services</item>
        <item> General Discussion</item>

    </string-array>
</resources>
