<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rasen.msunow.RegisterActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/reg_firstName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:imeOptions="actionNext"
        android:hint="@string/first_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/reg_firstName"
        android:layout_alignRight="@+id/reg_firstName"
        android:layout_alignEnd="@+id/reg_firstName"
        android:id="@+id/reg_lastName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:imeOptions="actionNext"
        android:hint="@string/last_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/reg_lastName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/reg_Email"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:imeOptions="actionNext"
        android:hint="@string/prompt_create_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/reg_Email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/reg_Passw"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:imeOptions="actionNext"
        android:hint="@string/prompt_create_password" />

    <Button
        android:id="@+id/bttn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/DOB"
        android:text="@string/action_sign_up" />

    <EditText
        android:id="@+id/DOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/reg_Passw"
        android:ems="10"
        android:hint="@string/prompt_dob"
        android:inputType="date" />

</RelativeLayout>
