<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rasen.msunow.UserInputActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_cancel"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:onClick="BackToPre"
            android:text="@string/action_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            style="@style/CategoryStyle"
            android:text="@string/caption_view_other_discussions" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Topic Label -->
            <TextView
                android:id="@+id/tv_topic_title"
                style="@style/CategoryStyle"
                android:text="@string/caption_topic_title" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical"
                android:paddingLeft="0dp">

                <!-- Topic subject field -->
                <EditText
                    android:id="@+id/topic_title"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/caption_hint_topic_title"
                    android:inputType="text" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Topic Body Label -->
            <TextView
                android:id="@+id/tv_topic_body"
                style="@style/CategoryStyle"
                android:text="@string/caption_topic_body" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical"
                android:paddingLeft="0dp">

                <!-- Topic Body field -->
                <EditText
                    android:id="@+id/topic_body"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/caption_hint_topic_body"
                    android:inputType="textMultiLine" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Spinner Label -->
            <TextView
                android:text="@string/caption_select_room"
                style="@style/CategoryStyle" />

            <!-- Input field -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <!-- Room drop-down spinner -->
                <Spinner
                    android:id="@+id/rooms_spinner"
                    android:layout_height="48dp"
                    android:layout_width="wrap_content"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bcancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_cancel"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:onClick="cancel"
            android:text="@string/action_cancel" />

        <Button
            android:id="@+id/bpost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_post"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:onClick="post"
            android:layout_gravity="right"
            android:text="@string/action_post" />

    </LinearLayout>


    </LinearLayout>
</ScrollView>
