<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rasen.msunow.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/log_email"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:imeOptions="actionNext"
        android:hint="@string/prompt_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/log_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/log_pass"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:imeOptions="actionNext"
        android:hint="@string/prompt_password" />

    <Button
        android:text="@string/action_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bttn_login"
        android:layout_below="@+id/passReset"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tv_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bttn_login"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:text="@string/action_register"
        android:visibility="visible"
        tools:clickable="true" />

    <TextView
        android:id="@+id/passReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tv_Register"
        android:layout_alignLeft="@+id/tv_Register"
        android:layout_alignRight="@+id/tv_Register"
        android:layout_alignStart="@+id/tv_Register"
        android:layout_below="@+id/log_pass"
        android:clickable="true"
        android:text="@string/forgot_pw"
        android:textAlignment="center"
        tools:clickable="true" />
</RelativeLayout>
